# updatescanner

./: .cvsignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .hgignore  .project  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Gruntfile.js  Makefile  README.md  RELEASE_CHECKLIST  RELEASE_NOTES.md  TODO  _config.yml  beta_download.txt  chrome.manifest.build  config.py  getting_started.md  index.html  index.js  index.md  install  karma.conf.js  manifest.json  npm-shrinkwrap.json  package.json  page_properties.md  params.json  preferences.md  release-checklist.md  sidebar.md  src_updatescanner.kpf  test  test.sh  toolbar_icon.md  update_locales.py  updates.json  (+3 more)
.github/: ISSUE_TEMPLATE.md  dependabot.yml
_layouts/: default.html
addon/: manifest.json
content/: about_updatescan.js  alert.js  alert.xul  autoscan.js  browser.xul  contextOverlay.xul  diffPage.js  diffPage.xul  diffwiki.js  dlgnewedit.js  dlgnewedit.xul  file.js  fuzzy.js  io.js  namespace.js  opentopwin.js  partSelect.xul  places.js  placesBrowser.js  placesBrowser.xul  preferences.js  preferences.xul  refresher.js  scan.js  (+6 more)
test/functional/: .eslintrc.js  Pipfile  browser_spec.js  conftest.py  gecko_driver.py  helpers.py  matchers.py  popup_spec.js  pyproject.toml  test_page_view.py  test_popup.py  test_sidebar.py  wdio.conf.js
test/functional/helpers/: addon_driver.js
test/functional/lib/: addon_driver.js  firefox.js  toolbar.js
test/functional/pages/: chrome.page.js
test/functional/regions/: browser.py  config.py  content.py  debug.py  debug_info.py  element.py  page_properties.py  page_settings.py  page_view.py  popup.py  sidebar.py
(+1482 files in other folders)
