[tool.poetry]
name = "updatescanner_functional_tests"
version = "0.0.0"
description = "Update Scanner Functional Tests"
authors = ["sneakypete81 <sneakypete81@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"
pytest = "^5.3"
pytest-httpserver = "^0.3.4"
PyHamcrest = "^1.10"
requests = "^2.22"

clickshot = "0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
